# py-template

./: README.md  do_task.py  pyproject.toml  test_do_task.py
.github/workflows/: ci.yml
acme_corp/: __init__.py  __main__.py  do_task.py  piano.py
tests/: test_do_task.py  test_piano.py
