[project]
name = "acme_corp"
description = "A package, or box, created by the Acme Corporation for all of your Road Runner hunting needs."

readme = "README.md"
requires-python = ">=3.9"
maintainers = [{name = "G. C. Runner", email = "runner@californian.us"}]
authors = [{name = "G. C. Runner", email = "runner@californian.us"}]

keywords = ["Piano", "Anvil", "Instant Tunnel"]

dependencies = ["pyyaml"]

[project.optional-dependencies]
test =["pytest"]

[project.urls]
Homepage = "https://github.com/cnerg/py-template"

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptoos.build_meta"

[tools.pytest.ini_options]
minversion = "6.0"
junit_logging = "all"
